--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Chosen Palette: Calm Neutrals -->
     <!-- Application Structure Plan: The SPA is structured into thematic, full-screen sections with a top navigation bar for easy access (Hero, Problem/Solution, Tech Stack, Architecture Explorer, Features, Conclusion). This structure was chosen over a linear document layout to create a more engaging, guided, and professional presentation. The highlight is the 'Architecture Explorer,' which turns a static text description into an interactive diagram. This allows users (recruiters, peers) to actively explore the project's technical depth at their own pace, making complex information more digestible and memorable. The user flow is from a high-level overview to deep technical details, controlled by the user. -->
-    <!-- Visualization & Content Choices: Report Info: Project Architecture -> Goal: Explain a complex, two-part process -> Viz/Presentation Method: Interactive diagram built with HTML/CSS/JS -> Interaction: Toggle buttons switch between the 'Knowledge Base Pipeline' and 'RAG Chatbot' workflows. Clickable nodes on the diagram reveal detailed explanations in a modal window. -> Justification: This transforms a static description into an engaging, self-paced learning experience, allowing users to drill down into details as needed, which is far more effective than reading paragraphs of text. -> Library/Method: Vanilla JS, Tailwind CSS. | Report Info: Tech Stack & Key Features -> Goal: Inform/Summarize -> Viz/Presentation Method: Grid of styled cards with icons -> Interaction: Subtle hover effects -> Justification: Enhances scannability and visual appeal compared to a simple bulleted list, making key information stand out. -> Library/Method: Tailwind CSS. -->
+    <!-- Visualization & Content Choices: Report Info: Project Architecture -> Goal: Explain a complex, two-part process -> Viz/Presentation Method: Interactive diagram built with HTML/CSS/JS -> Interaction: Toggle buttons switch between the 'Knowledge Base Pipeline' and 'RAG Chatbot' workflows. Clickable nodes on the diagram reveal detailed explanations in a modal window. -> Justification: This transforms a static description into an engaging, self-paced learning experience, allowing users to drill down into details as needed, which is far more effective than reading paragraphs of text. -> Library/Method: Vanilla JS, Tailwind CSS. | Report Info: Tech Stack & Key Features -> Goal: Inform/Summarize -> Viz/Presentation Method: Grid of styled cards with icons -> Interaction: Subtle hover effects -> Justification: Enhances scability and visual appeal compared to a simple bulleted list, making key information stand out. -> Library/Method: Tailwind CSS. -->
     <!-- CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     <style>
         body {
@@ -117,8 +117,8 @@
                         </div>
                     </div>
                     <div class="mt-8 md:mt-0">
-                        <img src="https://placehold.co/600x450/e2e8f0/334155?text=Chatbot+Interface+Screenshot" alt="Chatbot Interface in action" class="rounded-xl shadow-2xl border-4 border-white">
-                        <p class="text-center text-sm text-slate-500 mt-4">Replace with a screenshot of your chatbot interface.</p>
+                        <img src="/ai-financial-analyst/assets/chatbot-interface.png" alt="Chatbot Interface in action" class="rounded-xl shadow-2xl border-4 border-white">
+                        <p class="text-center text-sm text-slate-500 mt-4">The user-facing interface of the chatbot.</p>
                     </div>
                 </div>
             </div>
@@ -173,8 +173,8 @@
                 </div>
                 
                 <div class="my-12">
-                     <img src="https://placehold.co/1200x600/e2e8f0/334155?text=Full+n8n+Workflow+Screenshot" alt="Full n8n Workflow" class="rounded-xl shadow-2xl border-4 border-white mx-auto">
-                     <p class="text-center text-sm text-slate-500 mt-4">Replace with a screenshot of your full n8n canvas.</p>
+                     <img src="/ai-financial-analyst/assets/n8n-workflow.png" alt="Full n8n Workflow" class="rounded-xl shadow-2xl border-4 border-white mx-auto">
+                     <p class="text-center text-sm text-slate-500 mt-4">The complete n8n workflow canvas.</p>
                 </div>
 
                 <div class="mt-12 flex justify-center space-x-4">
@@ -393,4 +393,5 @@
     </script>
 </body>
 </html>
+
 
