--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Showcase: AI-Powered Financial Analyst Chatbot</title>
+    <title>Project Showcase: AI RAG Chatbot with n8n</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Chosen Palette: Calm Neutrals -->
-    <!-- Application Structure Plan: The SPA is structured into thematic, full-screen sections with a top navigation bar for easy access (Hero, Problem/Solution, Vector DB, Tech Stack, Architecture Explorer, Features, Conclusion). This structure was chosen over a linear document layout to create a more engaging, guided, and professional presentation. A new dedicated section for the Vector Database explains its core importance. The highlight remains the 'Architecture Explorer,' which turns a static text description into an interactive diagram. This allows users (recruiters, peers) to actively explore the project's technical depth at their own pace, making complex information more digestible and memorable. The user flow is from a high-level overview to deep technical details, controlled by the user. -->
-    <!-- Visualization & Content Choices: Report Info: Vector DB concept -> Goal: Explain a core technical concept simply -> Viz/Presentation Method: Two-column layout with simple diagrams made with styled HTML/CSS. -> Interaction: None, purely illustrative. -> Justification: Visually breaks down the abstract concept of embeddings and semantic search for a non-expert audience. | Report Info: Project Architecture -> Goal: Explain a complex, two-part process -> Viz/Presentation Method: Interactive diagram built with HTML/CSS/JS -> Interaction: Toggle buttons switch between the 'Knowledge Base Pipeline' and 'RAG Chatbot' workflows. Clickable nodes on the diagram reveal detailed explanations in a modal window. -> Justification: This transforms a static description into an engaging, self-paced learning experience, allowing users to drill down into details as needed. -> Library/Method: Vanilla JS, Tailwind CSS. -->
+    <!-- Application Structure Plan: The SPA is structured thematically with a navigation bar (Hero, Solution, Tech Stack, Why n8n, Architecture, Features, Conclusion). A new "Why n8n" section has been added to explicitly highlight the platform's role. The structure is designed for a professional audience, flowing from a high-level overview to deep technical details, emphasizing the power of n8n as the core orchestrator. The interactive architecture diagram remains the centerpiece for technical exploration. -->
+    <!-- Visualization & Content Choices: Report Info: Vector DB concept -> Goal: Explain a core technical concept simply -> Viz/Presentation Method: Two-column layout with simple diagrams made with styled HTML/CSS. -> Justification: Visually breaks down the abstract concept of embeddings and semantic search. | Report Info: Project Architecture -> Goal: Explain a complex, two-part process -> Viz/Presentation Method: Interactive diagram built with HTML/CSS/JS -> Interaction: Toggling diagrams and clicking nodes for modal explanations. -> Justification: Transforms a static description into an engaging, self-paced learning experience. -> Library/Method: Vanilla JS, Tailwind CSS. -->
     <!-- CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     <style>
         body {
@@ -83,11 +83,11 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex-shrink-0">
-                    <h1 class="text-xl font-bold text-slate-800">AI Financial Analyst</h1>
+                    <h1 class="text-xl font-bold text-slate-800">RAG Chatbot with n8n</h1>
                 </div>
                 <nav class="hidden md:flex md:space-x-8">
                     <a href="#solution" class="text-slate-600 hover:text-indigo-600 font-medium">Solution</a>
-                    <a href="#vector-db" class="text-slate-600 hover:text-indigo-600 font-medium">Vector DB</a>
+                    <a href="#why-n8n" class="text-slate-600 hover:text-indigo-600 font-medium">Why n8n?</a>
                     <a href="#architecture" class="text-slate-600 hover:text-indigo-600 font-medium">Architecture</a>
                     <a href="#features" class="text-slate-600 hover:text-indigo-600 font-medium">Features</a>
                 </nav>
@@ -99,10 +99,10 @@
         <section id="hero" class="min-h-screen flex items-center bg-white">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
                 <h2 class="text-4xl md:text-6xl font-extrabold text-slate-900 leading-tight">
-                    AI-Powered Financial Analyst Chatbot
+                    AI Financial Analyst Chatbot <span class="text-indigo-600">Built with n8n</span>
                 </h2>
                 <p class="mt-6 max-w-3xl mx-auto text-lg md:text-xl text-slate-600">
-                    An automated solution to instantly and accurately answer questions from complex financial reports using a Retrieval-Augmented Generation (RAG) architecture.
+                    An automated solution built entirely on the n8n automation platform, using a Retrieval-Augmented Generation (RAG) architecture to instantly answer questions from complex financial reports.
                 </p>
                 <a href="#solution" class="mt-10 inline-block bg-indigo-600 text-white font-semibold px-8 py-3 rounded-lg shadow-lg hover:bg-indigo-700 transition-transform transform hover:scale-105">
                     Explore The Project
@@ -117,19 +117,83 @@
                         <div class="bg-white p-8 rounded-xl shadow-lg border border-slate-200 mb-8">
                             <h3 class="text-3xl font-bold text-slate-900">The Challenge</h3>
                             <p class="mt-4 text-lg text-slate-600">
-                                Financial analysis involves sifting through dense, lengthy quarterly reports. This manual process is slow and prone to error, making it difficult to extract precise data points quickly. Traditional keyword search often fails to capture the semantic nuance of financial language.
+                                Financial analysis involves sifting through dense, lengthy quarterly reports. This manual process is slow and prone to error. Traditional keyword search often fails to capture the semantic nuance of financial language.
                             </p>
                         </div>
                         <div class="bg-indigo-600 text-white p-8 rounded-xl shadow-lg">
                             <h3 class="text-3xl font-bold">The Solution</h3>
                             <p class="mt-4 text-lg opacity-90">
-                                An AI-powered chatbot built on a RAG architecture using n8n. It ingests financial reports to build a "semantic memory", understands complex user queries, and provides accurate, source-based answers instantly. It finds answers based on meaning, not just keywords.
+                                An AI-powered chatbot built entirely on the n8n automation platform. It uses a powerful RAG architecture to build a "semantic memory", understand complex user queries, and provide accurate, source-based answers instantly.
                             </p>
                         </div>
                     </div>
                     <div class="mt-8 md:mt-0">
                         <img src="/ai-financial-analyst/assets/chatbot-interface.png" alt="Chatbot Interface in action" class="rounded-xl shadow-2xl border-4 border-white">
                         <p class="text-center text-sm text-slate-500 mt-4">The user-facing interface of the chatbot.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section id="stack" class="py-20 sm:py-28 bg-white">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="text-center">
+                    <h2 class="text-3xl font-bold text-slate-900 tracking-tight sm:text-4xl">Technology Stack</h2>
+                    <p class="mt-4 text-xl text-slate-600">Integrating a modern stack of AI and data technologies, all orchestrated by n8n.</p>
+                </div>
+                <div class="mt-16 grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-8 text-center">
+                    <div class="flex flex-col items-center">
+                        <div class="text-4xl">⚙️</div>
+                        <h4 class="mt-2 text-lg font-semibold text-slate-800">n8n.io</h4>
+                        <p class="text-slate-500">Workflow Orchestrator</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <div class="text-4xl">📄</div>
+                        <h4 class="mt-2 text-lg font-semibold text-slate-800">Google Drive</h4>
+                        <p class="text-slate-500">Data Source</p>
+                    </div>
+                     <div class="flex flex-col items-center">
+                        <div class="text-4xl">🧠</div>
+                        <h4 class="mt-2 text-lg font-semibold text-slate-800">Google Gemini</h4>
+                        <p class="text-slate-500">Embeddings & LLM</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <div class="text-4xl">🌲</div>
+                        <h4 class="mt-2 text-lg font-semibold text-slate-800">Pinecone</h4>
+                        <p class="text-slate-500">Vector Database</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <div class="text-4xl">🤖</div>
+                        <h4 class="mt-2 text-lg font-semibold text-slate-800">AI Agent</h4>
+                        <p class="text-slate-500">n8n Orchestration</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <div class="text-4xl">🧩</div>
+                        <h4 class="mt-2 text-lg font-semibold text-slate-800">RAG</h4>
+                        <p class="text-slate-500">Core Architecture</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="why-n8n" class="py-20 sm:py-28">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="text-center">
+                    <h2 class="text-3xl font-bold text-slate-900 tracking-tight sm:text-4xl">Why n8n? The Power of Visual Automation</h2>
+                    <p class="mt-4 text-xl text-slate-600 max-w-4xl mx-auto">n8n wasn't just a part of the stack; it was the entire development environment. Here’s why it was the perfect choice for building this complex AI system.</p>
+                </div>
+                <div class="mt-16 grid grid-cols-1 md:grid-cols-3 gap-8">
+                    <div class="bg-white p-6 rounded-lg shadow-md border border-slate-200">
+                        <h4 class="text-lg font-semibold text-slate-800">🚀 Rapid Development & Prototyping</h4>
+                        <p class="mt-2 text-slate-600">Visually build and debug complex AI pipelines in hours, not weeks. The node-based interface accelerates the entire development lifecycle from idea to deployment.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md border border-slate-200">
+                        <h4 class="text-lg font-semibold text-slate-800">🔗 Seamless Integration</h4>
+                        <p class="mt-2 text-slate-600">Effortlessly connect diverse services like Google Drive, Pinecone, and any AI model via APIs. n8n acts as the central hub for all data flow and logic.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md border border-slate-200">
+                        <h4 class="text-lg font-semibold text-slate-800">🔍 Full Control & Transparency</h4>
+                        <p class="mt-2 text-slate-600">The entire logic is visible and editable on one canvas, providing unparalleled clarity and control over the AI process from end to end.</p>
                     </div>
                 </div>
             </div>
@@ -170,7 +234,7 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center">
                     <h2 class="text-3xl font-bold text-slate-900 tracking-tight sm:text-4xl">Interactive Architecture Explorer</h2>
-                    <p class="mt-4 text-xl text-slate-600 max-w-4xl mx-auto">The project's engine is composed of two distinct but connected automated workflows. Use the buttons below to explore each one, and click any step to see its detailed function.</p>
+                    <p class="mt-4 text-xl text-slate-600 max-w-4xl mx-auto">The project's engine is composed of two distinct but connected automated workflows, orchestrated entirely within n8n. Use the buttons below to explore each one, and click any step to see its detailed function.</p>
                 </div>
                 
                 <div class="my-12">
